[gd_scene load_steps=14 format=2]

[ext_resource path="res://Particles/greenOrbSmallSimple.png" type="Texture" id=1]
[ext_resource path="res://Colectables/Orb.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/Effects/Orbs/Pickup_Coin_1.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Colectables/OrbKB.gd" type="Script" id=5]
[ext_resource path="res://Shadows/mini-mini shadow.png" type="Texture" id=7]
[ext_resource path="res://Colectables/OrbShadow.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "flote"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 0.482968, 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 0, -0.436454 ), Vector2( 0, -0.145485 ), Vector2( 0, -1.30936 ), Vector2( 0, -1.11538 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "pulse"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 9.67037

[sub_resource type="CircleShape2D" id=6]
radius = 49.3153

[node name="Orb" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 5 )
FRICTION = 600
MAX_SPEED = 80

[node name="Orb" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="shadow" type="Node" parent="Orb"]

[node name="sombra" type="Sprite" parent="Orb/shadow"]
modulate = Color( 1, 1, 1, 0.12549 )
position = Vector2( 1.06169, 1.80166 )
texture = ExtResource( 7 )
offset = Vector2( 0.405, 0 )
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Orb"]
position = Vector2( 0, -1.30936 )
frames = SubResource( 1 )
playing = true

[node name="orbAnim" type="AnimationPlayer" parent="Orb"]
autoplay = "flote"
anims/flote = SubResource( 2 )
anims/hide = SubResource( 3 )
anims/pulse = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Orb"]
position = Vector2( 0.531926, -0.595752 )
shape = SubResource( 5 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="Orb"]
stream = ExtResource( 3 )

[node name="PlayerDetectionZone" parent="Orb" instance=ExtResource( 4 )]
stop_following = false

[node name="CollisionShape2D" parent="Orb/PlayerDetectionZone" index="0"]
shape = SubResource( 6 )

[connection signal="body_entered" from="Orb" to="Orb" method="_on_Orb_body_entered"]
[connection signal="finished" from="Orb/AudioStreamPlayer2D" to="Orb" method="_on_AudioStreamPlayer2D_finished"]

[editable path="Orb/PlayerDetectionZone"]
